# laravel.pv122.com/routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\API\CategoryController;
+use App\Http\Controllers\AuthController;
 
 /*
 |--------------------------------------------------------------------------
@@ -14,10 +15,23 @@ use App\Http\Controllers\API\CategoryController;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
+Route::group([
+    'middleware' => 'api',
+    'prefix' => 'auth'
+], function ($router) {
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::post('/refresh', [AuthController::class, 'refresh']);
+    Route::get('/user-profile', [AuthController::class, 'userProfile']);
+});
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+//отримання списку категорій
 Route::get("/category", [CategoryController:: class, 'index']);
 //додавання нової категорії
 Route::post("/category", [CategoryController:: class, 'store']);
+Route::put('/category/{id}', [CategoryController:: class, 'update']);
+Route::delete('/category/{id}',  [CategoryController:: class, 'delete']);
