# my-app/src/components/auth/registration/types.ts
@@ -1,0 +1,8 @@
+export interface  IRegistrationInfo{
+    firstName: string,
+    lastName:string,
+    email:string,
+    phoneNumber:string;
+    password:string,
+    photo:  File|null,
+}
